# Bedrock

./: .gitignore  README.md
core/: CMakeLists.txt
core/include/: auth.h  core_api.h  crypto.h  models.h
core/include/database/: queries.h  sqlite_wrapper.h
core/src/: core_init.c
core/src/auth/: auth_manager.c  session.c
core/src/crypto/: encryption.c  hashing.c
core/src/database/: queries.c  sqlite_wrapper.c
core/src/models/: note.c  user.c
core/tests/: test_core.c
server/: app.py  package-lock.json  package.json  server.js
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  router.js
web/src/services/: api.js  auth.js
web/src/views/: Login.vue  Notes.vue  TestAPI.vue
